--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "homepage": "https://github.com/santoshskt9/conglobase#readme",
   "dependencies": {
+    "5": "^0.0.1",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   }
