--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hbs": "^4.2.0",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20"
   }
 }
