--- a/package.json
+++ b/package.json
@@ -38,10 +38,7 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-<<<<<<< HEAD
-    "nodemon": "^2.0.20"
-=======
+    "nodemon": "^2.0.20",
     "sib-api-v3-sdk": "^8.5.0"
->>>>>>> 17bbdfaeedfed31ce531dd514b2be9f207f94767
   }
 }
